# WBRobot

./: CMakeLists.txt  README
ctrl/: CMakeLists.txt  guicamera.cc  osrobot.cc
plugins/: CMakeLists.txt  gui_screencast.cc  gui_screencast.hh  osrobot_controller.cc  osrobot_factory.cc  osrobot_motion.cc  osrobot_motion.hh  osrobot_visual.cc  osrobot_visual.hh  robot_factory.cc  screen_cast.cc  screen_cast.hh
plugins/msgs/: CMakeLists.txt  req.proto
src/: CMakeLists.txt  controller.cc  controller.hh  osrobot_controller.cc  osrobot_controller.hh  osrobot_motion.cc  robot_factory.cc
world/: .wbr.model.swp  CMakeLists.txt  osrobots.world  pioneer.world  wbrobots.world
world/models/: CMakeLists.txt  manifest.xml  update.sh  wbr.model
world/models/camera/: camera.sdf  manifest.xml
world/models/laser/: laser.sdf  manifest.xml
world/models/organs/: manifest.xml  model.sdf
world/models/osrobot/: manifest.xml  model.sdf
world/models/osrobot/materials/scripts/: osrobot.material
world/models/osrobot/meshes/: chassis.dae  wheel.dae
world/models/village/: manifest.xml  model.sdf
world/models/village/meshes/: terrian.dae
world/models/wbrobot/: .model.sdf.swp  manifest.xml  model.sdf
world/models/wheel/: manifest.xml  wheel.sdf
